--- a/webspeech/index.html
+++ b/webspeech/index.html
@@ -209,10 +209,11 @@
         <div class="rules">
             Правила голосового вводу прикладів: 
             <ul>
-                <li>Перед тим, як обчислити приклад, користувачеві необхідно вибрати мову, якою цей приклад буде записан. Якщо мова буде вибрана неправильно, то приклад може бути обчислен з помилками.</li>
-                <li>Числа, як і інші вирази, можна вводити на трьох мовах, але є деякі обмеження: числа можна вводити в проміжку від нуля до ста. Також є можливість вводити дійсні числа округленні до сотих у цьому ж проміжку. Приклад того, як це повинно виглядати: “двадцять три крапка сімдесят чотири”. Як це розуміє комп’ютер: 23.74.</li>
-                <li>Якщо необхідно, наприклад, взяти корінь з суми, добутку чи іншого будь-якого виразу - необхідно взяти підкореневий вираз у дужки. Приклад того, як це повинно виглядати: “корінь з відкрити скобку девять плюс п’ять закрити скобку”. Як це розуміє комп’ютер: √(9 + 5). Це треба пам’ятати при роботі з усіма подібними функціями.</li>
-                <li>Обов’язково повинен бути хоча б один пробіл між виразами та числами. Не повинно бути такого: “23плюс чотири”. Приклад не буде обчисленим.</li>
+                <li>Перед початком роботи користувачеві необхідно вибрати мову, якою буде проговорено або введено приклад. Якщо мова буде вибрана неправильно, то значення виразу може бути обчислене з помилками.</li>
+                <li>Числа можуть бути цілими та дійсними. Роздільник цілої та дійсної частини – слово «крапка». Приклад того, як це повинно звучати: “двадцять три крапка сімдесят чотири”. Комп’ютер це розуміє як 23,74.</li>
+                <li>Якщо необхідно, наприклад, добути квадратний корінь з суми, добутку чи іншого виразу, то необхідно взяти підкореневий вираз у дужки. Приклад того, як це повинно звучати: “корінь з, відкрити дужку, дев’ять плюс п’ять, закрити дужку”. Комп’ютер це розуміє як √(9 + 5).</li>
+                <li>Дужки для обмеження аргументів потрібно використовувати при роботі з усіма функціями, наприклад, синус, косинус тощо.</li>
+                <li>Під час не голосового, а письмового введення виразу, обов’язково повинен бути хоча б один пробіл між числами та іншими символами. Не повинно бути такого: “23плюс чотири”. Значення виразу не буде обчисленим.</li>
             </ul>
         </div>
 
