--- a/webspeech/index.html
+++ b/webspeech/index.html
@@ -209,11 +209,11 @@
         <div class="rules">
             Правила голосового вводу прикладів: 
             <ul>
-                <li>Перед початком роботи користувачеві необхідно вибрати мову, якою буде проговорено або введено приклад. Якщо мова буде вибрана неправильно, то значення виразу може бути обчислене з помилками.</li>
-                <li>Числа можуть бути цілими та дійсними. Роздільник цілої та дійсної частини – слово «крапка». Приклад того, як це повинно звучати: “двадцять три крапка сімдесят чотири”. Комп’ютер це розуміє як 23,74.</li>
-                <li>Якщо необхідно, наприклад, добути квадратний корінь з суми, добутку чи іншого виразу, то необхідно взяти підкореневий вираз у дужки. Приклад того, як це повинно звучати: “корінь з, відкрити дужку, дев’ять плюс п’ять, закрити дужку”. Комп’ютер це розуміє як √(9 + 5).</li>
-                <li>Дужки для обмеження аргументів потрібно використовувати при роботі з усіма функціями, наприклад, синус, косинус тощо.</li>
-                <li>Під час не голосового, а письмового введення виразу, обов’язково повинен бути хоча б один пробіл між числами та іншими символами. Не повинно бути такого: “23плюс чотири”. Значення виразу не буде обчисленим.</li>
+                <li>Перед початком роботи користувачеві необхідно вибрати мову, якою буде проговорено або введено приклад. Якщо мова буде вибрана неправильно, то значення виразу може бути обчислене з помилками. </li>
+                <li>Числа можуть бути цілими та дійсними. Роздільник цілої та дійсної частини – слово «крапка». Приклад того, як це повинно звучати: “двадцять три крапка сімдесят чотири”. Комп’ютер це розуміє як 23.74. </li>
+                <li>Якщо необхідно, наприклад, добути квадратний корінь з суми, добутку чи іншого виразу, то необхідно взяти підкореневий вираз у дужки. Приклад того, як це повинно звучати: “корінь з, відкрити дужку, дев’ять плюс п’ять, закрити дужку”. Комп’ютер це розуміє як √(9 + 5). </li>
+                <li>Дужки для обмеження аргументів потрібно використовувати при роботі з усіма функціями, наприклад, синус, косинус тощо.  </li>
+                <li>Під час не голосового, а письмового введення виразу, обов’язково повинен бути хоча б один пробіл між числами та іншими символами. Не повинно бути такого: “23плюс чотири”. Значення виразу не буде обчисленим. </li>
             </ul>
         </div>
 
@@ -235,7 +235,7 @@
             <div class="container">
                 <div class="texts">
                     <div>
-                        <input id="test" placeholder="Скажіть або уведіть приклад"></input>
+                        <input id="test" onchange="check()" placeholder="Скажіть або уведіть приклад"></input>
                     <button onclick="test()">Підрахувати</button>
                     </div>
                     <p class="res">Значення виразу: </p>
