--- a/webspeech/index.html
+++ b/webspeech/index.html
@@ -22,7 +22,7 @@
                 <li>Перед початком роботи користувачеві необхідно вибрати мову, якою буде проговорено або введено приклад. Якщо мова буде вибрана неправильно, то значення виразу може бути обчислене з помилками. </li>
                 <li>Числа можуть бути цілими та дійсними. Роздільник цілої та дійсної частини – слово «крапка». Приклад того, як це повинно звучати: “двадцять три крапка сімдесят чотири”. Комп’ютер це розуміє як 23.74. </li>
                 <li>Якщо необхідно, наприклад, піднести до степеня суму, добуток чи інший вираз, то необхідно взяти вираз у дужки. Приклад того, як це повинно звучати: "відкрити дужку, один плюс один, закрити дужку, степінь два”. Комп’ютер це розуміє як (1 + 1)**2, тобто - чотири. </li>
-                <li>Дужки для обмеження аргументів потрібно використовувати при роботі з усіма функціями, наприклад, синус, косинус тощо.  </li>
+                <li>Дужки для обмеження аргументів потрібно використовувати при роботі з усіма функціями, наприклад, піднесення до степеня, тощо.  </li>
                 <li>Під час не голосового, а письмового введення виразу, обов’язково повинен бути хоча б один пробіл між числами та іншими символами. Не повинно бути такого: “23плюс чотири”. Значення виразу не буде обчисленим. </li>
             </ul>
         </div>
