--- a/worldMap/index.html
+++ b/worldMap/index.html
@@ -48,7 +48,9 @@
             натискай на країну та вивчай її політичну, фізичну, топографічну та
             кліматичну карти
           </p>
-          <a class="header__button" href="#"> Перейти до вивчення </a>
+          <a class="header__button" href="#cellsAndMap">
+            Перейти до вивчення
+          </a>
         </div>
       </div>
       <div class="header__pictures">
@@ -65,7 +67,7 @@
 
     <div class="map">
       <div class="world_map geography" id="world_map">
-        <div class="cells">
+        <div class="cells" id="cellsAndMap">
   <div class="cell"></div>
   <div class="cell"></div>
   <div class="cell"></div>
